--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div id="computer-choice"></div>
         <div id="result"></div>
         <div id="buttons">
-            <button id="rock">Rock</button>
-            <button id="paper">Paper</button>
-            <button id="scissors">Scissors</button>
+            <button id="rock">Rock 🪨</button>
+            <button id="paper">Paper 📃</button>
+            <button id="scissors">Scissors ✂️</button>
         </div>
     </div>
     <script src="main.js"></script> </body>
